# proto/micro_mall_shop_proto/shop_business/shop_business.swagger.json
@@ -80,6 +80,42 @@
         ]
       }
     },
+    "/v1/shop_business/shop/info/major": {
+      "get": {
+        "summary": "获取店铺主要信息",
+        "operationId": "ShopBusinessService_GetShopMajorInfo",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/shop_businessGetShopMajorInfoResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "shop_ids",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "int64"
+            },
+            "collectionFormat": "multi"
+          }
+        ],
+        "tags": [
+          "ShopBusinessService"
+        ]
+      }
+    },
     "/v1/shop_business/shop/material": {
       "get": {
         "summary": "获取店铺材料",
@@ -292,6 +328,20 @@
         }
       }
     },
+    "shop_businessGetShopMajorInfoResponse": {
+      "type": "object",
+      "properties": {
+        "common": {
+          "$ref": "#/definitions/shop_businessCommonResponse"
+        },
+        "info_list": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/shop_businessShopMajorInfo"
+          }
+        }
+      }
+    },
     "shop_businessGetShopMaterialResponse": {
       "type": "object",
       "properties": {
@@ -471,6 +521,21 @@
           "type": "string"
         },
         "shop_code": {
+          "type": "string"
+        }
+      }
+    },
+    "shop_businessShopMajorInfo": {
+      "type": "object",
+      "properties": {
+        "shop_id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "shop_code": {
+          "type": "string"
+        },
+        "shop_name": {
           "type": "string"
         }
       }
